force-app/main/default/objects/NI_Customer_Relations_Engagement__c/NI_Customer_Relations_Engagement__c.object-meta.xml
<CustomObject>
    <description>NICC-010052: Customer Relations Engagement Project (TrackIt 110696) 

Track the progress of and facilitate reporting for customer engagements surrounding survey responses, subscription renewals, cancellation requests, customer escalations, and the general efforts of Customer Relations Managers.</description>
    <label>Engagement</label>
    <nameField>
        <displayFormat>CRE-{00000}</displayFormat>
        <label>Engagement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>