force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current DI</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Asset.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>CR_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>