force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/CustomerRelationsHours__c.field-meta.xml
<CustomField>
    <fullName>CustomerRelationsHours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Customer Relations Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>