force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Closed</label>
    <type>DateTime</type>
</CustomField>