force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>