force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Deployment_Instance_History_Record__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance_History_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement DI</label>
    <referenceTo>NI_Deployment_Instance_History__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Customer_Relations_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>