force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Development_Rate__c.field-meta.xml
<CustomField>
    <fullName>Development_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Development Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>