force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Engagement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements (Engagement Contact)</relationshipLabel>
    <relationshipName>Customer_Relations_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>