force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Engagement_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Contact_Phone__c</fullName>
    <formula>Engagement_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Contact Phone</label>
    <type>Text</type>
</CustomField>