force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/EngagementTrigger__c.field-meta.xml
<CustomField>
    <fullName>EngagementTrigger__c</fullName>
    <description>What triggered Engagement</description>
    <inlineHelpText>What triggered Engagement</inlineHelpText>
    <label>Engagement Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Internal Request</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>