force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Initial_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Activity_Date__c</fullName>
    <description>NICC-023453: Initial Activity Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Initial Activity Date</inlineHelpText>
    <label>Initial Activity Date</label>
    <type>Date</type>
</CustomField>