force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/NI_Org_Details__c.field-meta.xml
<CustomField>
    <fullName>NI_Org_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NI Org Details</label>
    <referenceTo>NI_Org_Details__c</referenceTo>
    <relationshipName>Customer_Relations_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>