force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
                <default>true</default>
                <label>1 - Low</label>
            </value>
            <value>
                <fullName>2 - Standard</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
            <value>
                <fullName>4 - Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>