force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <description>Where Engagement request came from</description>
    <inlineHelpText>Where Engagement request came from</inlineHelpText>
    <label>Requested By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Franchisor</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Customer Relations</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>