force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/RootCause__c.field-meta.xml
<CustomField>
    <fullName>RootCause__c</fullName>
    <description>Where we missed customer expecations</description>
    <inlineHelpText>Where we missed customer expecations</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Redirect</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>