force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Services_Cost__c.field-meta.xml
<CustomField>
    <fullName>Services_Cost__c</fullName>
    <formula>(Services_Hours__c * Services_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>