force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Services_Rate__c.field-meta.xml
<CustomField>
    <fullName>Services_Rate__c</fullName>
    <defaultValue>74.00</defaultValue>
    <label>Services Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>