force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>New - Created not assigned
Working - Assigned &amp; First Contact made with Client
Closed - Escalation Plan Executed. Customer no longer engaged with Customer Relations</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Closed - Resolved</fullName>
            </value>
            <value>
                <fullName>Closed - Recommendations Provided</fullName>
            </value>
            <value>
                <fullName>Closed - Unresolved</fullName>
            </value>
            <value>
                <fullName>Closed - Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>