force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Support_Rate__c.field-meta.xml
<CustomField>
    <fullName>Support_Rate__c</fullName>
    <defaultValue>25.00</defaultValue>
    <label>Support Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>