force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Total_LOE_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_LOE_Cost__c</fullName>
    <formula>(Customer_Relations_Cost__c + Development_Cost__c + Services_Cost__c + Support_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LOE Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>