force-app/main/default/objects/NI_Customer_Relations_Engagement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pro-Active</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>