force-app/main/default/objects/NI_Customer_Relations_Engagement__c/recordTypes/Closed_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Closed_Engagement</fullName>
    <active>true</active>
    <description>Record type that records are automatinally set to when the status of a record is set to closed.</description>
    <label>Closed Engagement</label>
</RecordType>