force-app/main/default/objects/NI_Customer_Relations_Engagement__c/recordTypes/Open_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Open_Engagement</fullName>
    <active>true</active>
    <description>Default Record Type</description>
    <label>Open Engagement</label>
</RecordType>