force-app/main/default/objects/NI_Customer_Relations_Engagement__c/validationRules/Engagement_Needs_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_Needs_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   
ISPICKVAL(Status__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>An Engagement must have a status.</errorMessage>
</ValidationRule>