force-app/main/default/objects/NI_Customer_Relations_Engagement__c/validationRules/Engagement_Needs_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_Needs_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   
ISPICKVAL(Type__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>An Engagement must have a Type.</errorMessage>
</ValidationRule>