force-app/main/default/objects/NI_Customer_Relations_Engagement__c/validationRules/RootCause_Product_Needs_DI_Lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>RootCause_Product_Needs_DI_Lookup</fullName>
    <active>true</active>
    <description>When the Root Cause is Product, you must select a Deployment Instance.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(RootCause__c, &quot;Product&quot;),
    ISBLANK(Asset__c)  
)</errorConditionFormula>
    <errorDisplayField>Asset__c</errorDisplayField>
    <errorMessage>When the Root Cause is Product, you must select a Deployment Instance.</errorMessage>
</ValidationRule>