force-app/main/default/objects/NI_Customer_Relations_Engagement__c/validationRules/RootCause_Services_Needs_Project_Lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>RootCause_Services_Needs_Project_Lookup</fullName>
    <active>true</active>
    <description>When the Root Cause is Newmarket Services, you must select an Originating Project.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(RootCause__c, &quot;Services&quot;),
    ISBLANK(Originating_Project__c)  
)</errorConditionFormula>
    <errorDisplayField>Originating_Project__c</errorDisplayField>
    <errorMessage>When the Root Cause is Newmarket Services, you must select an Originating Project.</errorMessage>
</ValidationRule>