force-app/main/default/objects/NI_Customer_Relations_Engagement__c/validationRules/RootCause_Support_Needs_Case_Lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>RootCause_Support_Needs_Case_Lookup</fullName>
    <active>true</active>
    <description>When the Root Cause is Newmarket Support, you must select an Originating Case.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(RootCause__c, &quot;Support&quot;),
    ISBLANK(Originating_Case__c)  
)</errorConditionFormula>
    <errorDisplayField>Originating_Case__c</errorDisplayField>
    <errorMessage>When the Root Cause is Newmarket Support, you must select an Originating Case.</errorMessage>
</ValidationRule>