force-app/main/default/objects/NI_Customer_Relations_Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date_Opened__c</columns>
    <columns>EngagementTrigger__c</columns>
    <columns>RequestedBy__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Engagements</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>