force-app/main/default/objects/NI_Customer_Relations_Engagement__c/listViews/All_Closed_Engagements.listView-meta.xml
<ListView>
    <fullName>All_Closed_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RequestedBy__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Date_Opened__c</columns>
    <columns>Date_Closed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>startsWith</operation>
        <value>Closed</value>
    </filters>
    <label>All Closed Engagements</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>