force-app/main/default/objects/NI_Customer_Relations_Engagement__c/listViews/All_Engagements_2019.listView-meta.xml
<ListView>
    <fullName>All_Engagements_2019</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Date_Opened__c</columns>
    <columns>EngagementTrigger__c</columns>
    <columns>RequestedBy__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019 12:00 AM</value>
    </filters>
    <label>All Engagements 2019</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>