force-app/main/default/objects/NI_Customer_Relations_Engagement__c/listViews/All_Open_Engagements.listView-meta.xml
<ListView>
    <fullName>All_Open_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RequestedBy__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Date_Opened__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>All Open Engagements</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>